--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Kire Jovanoski</strong>.</h1>
+								<h1>Welcome. I am <strong>Kire Jovanoski</strong>.</h1>
 							</header>
 							<p>Welcome to my <strong>Portfolio</strong> </p>
-							<a href="#work" class="button large scrolly">Learn about who am I</a>
+							<a href="#work" class="button large scrolly">Learn more about me</a>
 						</div>
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 				<div class="container">
 					<header>
 						<h2>Who am I?</h2>
-						<p>I am a solution oriented Java Developer, lifelong learner and dream follower with a professional background in the world of Finance and Accounting. Java Development became my new passion as overcoming challenges always brings satisfaction to me. I am motivated by the opportunity that software development combined with my rich knowledge as a Finance professional can provide to positively impact the world of software...</p>
+						<p>I am a dynamic and enthusiastic junior Java developer with a passion for crafting efficient and elegant solutions. Armed with a solid foundation in Java programming, I am excited to tackle challenges head-on and deliver high-quality code. My strong problem-solving skills, coupled with a keen eye for detail, allow me to create robust applications that exceed expectations. With an unwavering commitment to continuous learning, I am poised to contribute effectively to your projects and deliver results that showcase my unwavering confidence in my abilities. Let's collaborate to bring your ideas to life with the power of Java!</p>
 					</header>
 
 					<footer>
@@ -60,7 +60,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
+						<h2>Here are some of the projects I've been working on recently.</h2>
 
 					</header>
 					<div class="row">
@@ -73,9 +73,12 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Loading..</a></h3>
-<!--								<p>Ornare nulla proin odio consequat.</p>-->
+								<a href="https://github.com/KireJovanosky/Ecommerce-dockerized" class="image featured"><img src="images/pic02.png" alt="" /></a>
+								<h3><a href="https://github.com/KireJovanosky/Ecommerce-dockerized">Ecommerce application</a></h3>
+								<p>Ecommerce application with "jwt" token and "auth0" authentication. Implemented are many features like: admin and customer users with different menus, pagination, shopping cart,
+									checkout, adding/editing/deleting products with multiple pictures.. <br/> Click on the project name to be redirected to a dockerized version of the application on Github
+								<br/> Click <a href="https://github.com/KireJovanosky/Ecommerce">here</a> for the back-end code
+							<br/>Click <a href="https://github.com/KireJovanosky/Ecommerce-UI">here</a> for the front-end code</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
