--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/KireJovanosky/Ecommerce-dockerized" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://github.com/KireJovanosky/Ecommerce-dockerized" class="image featured"><img src="images/pic02.PNG" alt="" /></a>
 								<h3><a href="https://github.com/KireJovanosky/Ecommerce-dockerized">Ecommerce application</a></h3>
 								<p>Ecommerce application with "jwt" token and "auth0" authentication. Implemented are many features like: admin and customer users with different menus, pagination, shopping cart,
 									checkout, adding/editing/deleting products with multiple pictures.. <br/> Click on the project name to be redirected to a dockerized version of the application on Github
