--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kire Jovanoski - Portfolio</title>
+		<title>Miniport by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -73,7 +73,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/KireJovanosky/Ecommerce-dockerized" class="image featured"><img src="images/pic02.PNG" alt="" /></a>
+								<a href="https://github.com/KireJovanosky/Ecommerce-dockerized" class="image featured"><img src="images/pic02.png" alt="" /></a>
 								<h3><a href="https://github.com/KireJovanosky/Ecommerce-dockerized">Ecommerce application</a></h3>
 								<p>Ecommerce application with "jwt" token and "auth0" authentication. Implemented are many features like: admin and customer users with different menus, pagination, shopping cart,
 									checkout, adding/editing/deleting products with multiple pictures.. <br/> Click on the project name to be redirected to a dockerized version of the application on Github
@@ -83,9 +83,11 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Loading..</a></h3>
-<!--								<p>Ornare nulla proin odio consequat.</p>-->
+								<a href="https://github.com/KireJovanosky/TerminalPasswordManager" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<h3><a href="https://github.com/KireJovanosky/TerminalPasswordManager">Terminal Password Manager</a></h3>
+								<p>The Terminal Password Manager App is a Java application that allows users to manage their passwords securely in a terminal-based environment.
+									 This password manager provides the ability to store, retrieve and delete automaticaly generated and user defined passwords
+									  for various websites or applications. It encrypts and stores passwords in SQlite database..</p>
 							</article>
 						</div>
 <!--						<div class="col-4 col-6-medium col-12-small">-->
